// Gateway to network/chaincode
// Two types of gateways: 1. Gateway to all chaincodes in Network 2. Gateway to some concrete chaincode instance in some channel
syntax = "proto3";

option go_package = "github.com/s7techlab/cckit/gateway";
package cckit.gateway;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "peer/proposal_response.proto";
import "peer/chaincode_event.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

// Chaincode communication service. Allows to locate channel/chaincode.
service ChaincodeService {
    // Exec: Query or Invoke
    rpc Exec (ChaincodeExec) returns (protos.Response) {
        option (google.api.http) = {
            post: "/chaincode/exec"
            body: "*"
        };
    }

    // Query chaincode on home peer. Do NOT send to orderer.
    rpc Query (ChaincodeInput) returns (protos.Response) {
        option (google.api.http) = {
            get: "/chaincode/query"
        };
    }

    // Invoke chaincode on peers, according to endorsement policy and the SEND to orderer
    rpc Invoke (ChaincodeInput) returns (protos.Response) {
        option (google.api.http) = {
            post: "/chaincode/invoke"
            body: "*"
        };
    }

    // Chaincode events stream
    rpc EventsStream (ChaincodeEventsStreamRequest) returns (stream ChaincodeEvent) {
        option (google.api.http) = {
            get: "/chaincode/events-stream"
        };
    }

    // Chaincode events
    rpc Events (ChaincodeEventsRequest) returns (ChaincodeEvents) {
        option (google.api.http) = {
            get: "/chaincode/events"
        };
    }
}

// Chaincode events subscription service
service ChaincodeEventsService {
    // Chaincode events stream
    rpc EventsStream (ChaincodeEventsStreamRequest) returns (stream ChaincodeEvent) {
        option (google.api.http) = {
            get: "/chaincode/events-stream"
        };
    }

    // Chaincode events
    rpc Events (ChaincodeEventsRequest) returns (ChaincodeEvents) {
        option (google.api.http) = {
            get: "/chaincode/events"
        };
    }
}

// Chaincode instance communication service. Channel/chaincode already fixed.
service ChaincodeInstanceService {
    // Exec: Query or Invoke
    rpc Exec (ChaincodeInstanceExec) returns (protos.Response) {
        option (google.api.http) = {
            post: "/chaincode-instance/exec"
            body: "*"
        };
    }

    // Query chaincode on home peer. Do NOT send to orderer.
    rpc Query (ChaincodeInstanceInput) returns (protos.Response) {
        option (google.api.http) = {
            get: "/chaincode-instance/query"
        };
    }
    // Invoke chaincode on peers, according to endorsement policy and the SEND to orderer
    rpc Invoke (ChaincodeInstanceInput) returns (protos.Response) {
        option (google.api.http) = {
            post: "/chaincode-instance/invoke"
            body: "*"
        };
    }
    // Chaincode events stream
    rpc EventsStream (ChaincodeInstanceEventsStreamRequest) returns (stream protos.ChaincodeEvent) {
        option (google.api.http) = {
            get: "/chaincode-instance/events-stream"
        };
    }

    // Chaincode events
    rpc Events (ChaincodeInstanceEventsRequest) returns (ChaincodeEvents) {
        option (google.api.http) = {
            get: "/chaincode-instance/events"
        };
    }
}

// Chaincode instance events subscription service
service ChaincodeInstanceEventsService {
    // Chaincode events stream
    rpc EventsStream (ChaincodeInstanceEventsStreamRequest) returns (stream ChaincodeEvent) {
        option (google.api.http) = {
            get: "/chaincode-instance/events-stream"
        };
    }

    // Chaincode events s
    rpc Events (ChaincodeInstanceEventsRequest) returns (ChaincodeEvents) {
        option (google.api.http) = {
            get: "/chaincode-instance/events"
        };
    }
}

// Chaincode locator - channel name and chaincode name
message ChaincodeLocator {
    // Chaincode name
    string chaincode = 1 [(validator.field) = {string_not_empty : true}];
    // Channel name
    string channel = 2 [(validator.field) = {string_not_empty : true}];
}

// Chaincode invocation input
message ChaincodeInput {
    ChaincodeLocator chaincode = 1 [(validator.field) = {msg_exists : true}];
    // Input contains the arguments for invocation.
    repeated bytes args = 2;

    // TransientMap contains data (e.g. cryptographic material) that might be used
    // to implement some form of application-level confidentiality. The contents
    // of this field are supposed to always be omitted from the transaction and
    // excluded from the ledger.
    map<string, bytes> transient = 3;
}

// Chaincode invocation type
enum InvocationType {
    // Simulation
    QUERY = 0;
    // Simulation and applying to ledger
    INVOKE = 1;
}

// Chaincode execution specification
message ChaincodeExec {
    InvocationType type = 1;
    ChaincodeInput input = 2;
}

// Block limit number for event stream subscription or event list
// Values can be negative
message BlockLimit {
    // Block number
    int64 num = 1;
}

// Chaincode events stream request
message ChaincodeEventsStreamRequest {
    ChaincodeLocator chaincode = 1 [(validator.field) = {msg_exists : true}];
    BlockLimit from_block = 2;
    BlockLimit to_block = 3;
    repeated string event_name = 4;
}

// Chaincode events list request
message ChaincodeEventsRequest {
    ChaincodeLocator chaincode = 1 [(validator.field) = {msg_exists : true}];
    BlockLimit from_block = 2;
    BlockLimit to_block = 3;
    repeated string event_name = 4;
    uint32 limit = 5;
}

// Chaincode instance chaincode input spec
message ChaincodeInstanceInput {
    // Input contains the arguments for invocation.
    repeated bytes args = 1;

    // TransientMap contains data (e.g. cryptographic material) that might be used
    // to implement some form of application-level confidentiality. The contents
    // of this field are supposed to always be omitted from the transaction and
    // excluded from the ledger.
    map<string, bytes> transient = 2;
}

message ChaincodeInstanceExec {
    InvocationType type = 1;
    ChaincodeInstanceInput input = 2;
}

message ChaincodeInstanceEventsStreamRequest {
    BlockLimit from_block = 1;
    BlockLimit to_block = 2;
    repeated string event_name = 3;
}

message ChaincodeInstanceEventsRequest {
    BlockLimit from_block = 1;
    BlockLimit to_block = 2;
    repeated string event_name = 3;
    uint32 limit = 4;
}

message ChaincodeEvents {
    ChaincodeLocator chaincode = 1;
    BlockLimit from_block = 2;
    BlockLimit to_block = 3;
    repeated ChaincodeEvent items = 4;
}

message RawJson {
    bytes value = 1;
}

message ChaincodeEvent {
    protos.ChaincodeEvent event = 1;
    uint64 block = 2;
    google.protobuf.Timestamp tx_timestamp = 3;
    RawJson payload = 4;
}


